dataset/local/df_check_cert_python_env/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: ENV
        Env:
          - Key: PYTHONHTTPSVERIFY
            Value: "1"
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: ENV
        Env:
          - Key: PYTHONHTTPSVERIFY
            Value: "0"
